testsuite/gnatprove/tests/ug__ownership_observing/test.out
 error: object was observed at line 9
--> ownership_observing.adb:13:09
   13 |          X.all := X.all + 1;  --  illegal
      |          ~~^~~

 error: object was observed at line 9
--> ownership_observing.adb:14:09
   14 |          X.all := 1;          --  illegal
      |          ~~^~~
gnatprove: error during flow analysis and proof
